fix bug of covers

--- a/src/Components/Header/CartDrawer.module.css
+++ b/src/Components/Header/CartDrawer.module.css
@@ -7,6 +7,7 @@
   background-color: white;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
   transition: right 0.7s ease-in-out;
+  z-index: 100;
 }
 
 .cart.open {
