--- a/src/Components/Header/Cover.module.css
+++ b/src/Components/Header/Cover.module.css
@@ -1,24 +1,24 @@
 .cover {
   background-image: url(../../Assets/cover.jpg);
-  background-size: 100% 100%;
+  background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
   height: 65vh;
   overflow: hidden;
   background-attachment: fixed;
-  display: flex;
-  justify-content: center;
 }
 
 .backgroundOverlay {
   width: 100%;
   height: 100%;
-  position: absolute;
+  background-color: #101317;
+  opacity: 0.85;
 }
 
-.cover img {
-  width: 250px;
+.backgroundOverlay img {
   display: block;
   margin: auto;
-  position: relative;
+  transform: translateY(50%);
+  width: 250px;
 }
