--- a/src/Components/Pages/BoardGamesPage/BGCover.module.css
+++ b/src/Components/Pages/BoardGamesPage/BGCover.module.css
@@ -1,24 +1,25 @@
 .cover {
   background-image: url(../../../Assets/bgcover.jpg);
-  background-size: 100% 100%;
+  background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
-  height: 35vh;
+  height: 25vh;
   overflow: hidden;
   background-attachment: fixed;
-  display: flex;
-  justify-content: center;
 }
 
 .backgroundOverlay {
   width: 100%;
   height: 100%;
-  position: absolute;
+  background-color: #101317;
+  opacity: 0.6;
 }
 
-.cover span {
-  display: block;
-  transform: translateY(50%);
+.backgroundOverlay span {
+  display: flex;
+  justify-content: center;
+  transform: translateY(100%);
   color: white;
   font-family: Sans-serif;
   font-size: 40px;
